# youtube-music-download

./: .env.example  .gitignore  LICENSE  README.md  install.bat  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.bat  setup.py
ffmpeg/: README.txt
ffmpeg/doc/: developer.html  ffmpeg-all.html  ffmpeg-filters.html  ffplay-all.html  ffprobe-all.html
src/: __init__.py  config.py  downloader.py  exceptions.py  logger.py  utils.py
tests/: test_downloader.py  test_utils.py
